Загрузила проект на сервер

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,13 @@
 	<meta property="og:title" content="Это моя первая страница...">
 	<title>Андрей Браун - Веб-разработчик</title>
 </head>
+
 <body>
 
 	<header>
 		<nav>
 			<div class="logo">Андрей Браун</div>
+
 			<div class="menu"><ul>
 				<li>Обо мне</li>
 				<li>Услуги</li>
@@ -25,16 +27,232 @@
 			</ul></div>
 		</nav>
 	</header>
-	<div class="main"><div class="title_container">
-		<h1>Привет <br> Я Андрей Браун</h1>
-		<h4>Фулл стек веб-разработчик</h4>
-		<input type="submit" value="Обо мне">
-		<input type="submit" value="Мои работы">
-	</div></div>
+
+	<div class="main">
+		<div class="title_container">
+		    <h1>Привет <br> Я Андрей Браун</h1>
+		    <h4>Фулл стек веб-разработчик</h4>
+		    <input type="submit" value="Обо мне">
+		    <input type="submit" value="Мои работы">
+	    </div>
+	
+	
+		<h3>ОБО МНЕ</h3>
+		<img src="img/черта заголовка.png" alt=""> <br>
+		<img src="img/фотка1.png" alt="">
+
+		<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis beatae reprehenderit eos, perspiciatis ratione laboriosam aspernatur unde rerum accusamus <br>quaerat doloremque nostrum neque nam possimus quibusdam iure repellat magnam praesentium, pariatur sapiente veniam tempora.</p>
+
+		<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis beatae reprehenderit eos, perspiciatis ratione laboriosam aspernatur unde rerum accusamus <br>quaerat doloremque nostrum neque nam possimus quibusdam iure repellat magnam praesentium, pariatur sapiente veniam tempora.</p>
+
+		<img src="img/иконка.png" alt="Стрелочка загрузки"> 
+		<input  type="reset" value="Скачать резюме">
+
+	
+	    <h3>ЧТО Я УМЕЮ</h3>
+		<img src="img/черта заголовка.png" alt="">
+
+        <div class="item_skills">
+		    <img src="img/ноут.png" alt="Изображение1">
+		    <h4>Веб-дизайн</h4>
+		    <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit <br> Ut pariatur suscipit harum <br> ea quis, voluptatem.</p>	
+	    </div>	
+
+	    <div class="item_skills">
+		    <img src="img/знак.png" alt="Изображение2">
+		    <h4>Разработка</h4>
+		    <p>Lorem ipsum dolor sit <br>amet, consectetur <br>adipisicing elit.  Ut pariaturbr <br> suscipit harum <br> ea quis, voluptatem.</p>
+	    </div>
+
+	    <div class="item_skills">
+		    <img src="img/ракета.png" alt="Изображение3">
+		    <h4>GEO-оптимизация</h4>
+		    <p>Lorem ipsum dolor <br>sit amet,  consectetur adipisicing <br>elit  Ut pariatur suscipit<br>  harum ea quis, voluptatem.</p>
+	    </div>
+
+	    <div class="item_skills">
+		    <img src="img/граммофон.png" alt="Изображение4">
+		    <h4>Маркетинг</h4>
+		    <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit  Ut<br> pariatur suscipit harum ea <br> quis, voluptatem.</p>
+	    </div>
+
+
+		<h3>КЕЙСЫ</h3>
+		<img src="img/черта заголовка.png" alt="">
+		
+		<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa debitis earum laudantium consequuntur cum placeat eveniet, aperiam at.</p>
+
+		 <img src="img/фотка2.png" alt="Кейсы">
+
+		<div class="  ">
+			<h3>CLIENT:</h3>
+		 	<p>Какая-то компания </p>
+		</div> 
+
+		<div class="  ">
+			<h3>WEBSITE:</h3>
+		 	<p>http://www.somedomain.com </p>
+		</div> 
+
+        <div class="  ">
+        	<h2>Название проекта</h2>
+		    <p>Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Tempora voluptate cupiditate in, sapiente facilis eaque, earum sequi cum eum. Ea, ratione <br> obcaecati? Perferendis iusto, eligendi nisi esse neque cupiditate voluptatem  iste id, atque, adipisci praesentium numquam sit minus ipsam. Molestiae <br> veniam aut ad in magnam.</p>
+		</div>
+
+		<input type="submit" value="VISIT LIVE SITE">
+		<a target="_blank" href="http://www.somedomain.com">VISIT LIVE SITE</a>	
+
+		<h2>Расчет стоимости</h2>
+		<h3>ТИП САЙТА</h3>
+		<FORM>
+			<select name="Тип сайта"> 
+				<option value="0">Выберите пункт...</option>
+				<option value="1"> </option>
+				<option value="2"> </option>
+				<option value="3"> </option>
+				<option value="4"> </option>
+			</select>
+
+		<h3>ДИЗАЙН</h3>
+		<FORM>
+			<select name="Тип Дизайн"> 
+				<option value="0">Выберите пункт...</option>
+				<option value="1"></option>
+				<option value="2"></option>
+				<option value="3"> </option>
+				<option value="4"> </option>
+			</select>
+		</FORM>
+
+		<h3>АДАПТИВНОСТЬ</h3>
+		<FORM>
+			<select name="Адаптивность"> 
+				<option value="0">Выберите пункт...</option>
+				<option value="1"></option>
+				<option value="2"></option>
+				<option value="3"> </option>
+				<option value="4"> </option>
+			</select>
+		</FORM>
+
+		<p> <big> <b>Сроки</b></big>  </p>
+		<p> <big> <b>Стоимость</b></big>  </p>
+
+		<h3>НЕМНОГО СТАТИСТИКИ</h3>
+		<img src="img/черта заголовка.png" alt="">
+
+		<div class=" ">
+			<img src="img/смайл.png" alt=""> <br> <p>120 <br>СЧАСТЛИВЫХ КЛИЕНТОВ </p>
+		</div>
+
+		<div class=" ">
+			<img src="img/скобки.png" alt=""> <br> <p> 4,600 <br> ЧАСОВ РАБОТЫ </p>
+		</div>
+
+		<div class=" ">
+			<img src="img/галочка.png" alt=""> <br> <p> 340 <br> ПРОЕКТОВ ЗАВЕРШЕНО </p>
+		</div>
+
+		<div class=" ">
+			<img src="img/кубок.png" alt=""> <br> <p> 23 <br> НАГРАДЫ ПОЛУЧЕНО </p>
+		</div>
 
 
 
 
+		<h3>ОТЗЫВЫ</h3>
+		<img src="img/черта заголовка.png" alt=""> <br>
+		<img src="img/фотка3.png" alt="">
 
- </body>
+		<p>Lorem ipsum dolor, sit, amet consectetur adipisicing elit. Atque dolore tempora debitis modi minus deserunt, deleniti perspiciatis <br>facere ullam sint quo nihil praesentium corrupti laborum magnam magni amet doloremque facilis!</p>
+
+		<p> <b>Михаил,</b> Ген директор ПАО "Газпром" </p>
+
+
+	    </div>
+
+
+    <footer>
+
+ 	    <h3>МОИ КОНТАКТЫ</h3>
+		<img src="img/черта заголовка.png" alt="">
+
+		<p> Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Labore, iste. Earum, porro, perspiciatis. Hic, explicabo?</p>
+
+        <div class="  ">
+    	    <img src="img/гео.png" alt=""> <br> <p>Санкт-Петербург <br> Невский проспект 11</p>
+        </div>
+
+        <div class="  ">
+    	    <img src="img/конверт.png" alt=""> <br> <p>info@companyname.com </p>
+        </div>
+
+        <div class="  ">
+    	<img src="img/труба.png" alt=""> <br> <p> +7 999 999-99-99 </p>
+        </div>
+
+
+
+	    <h4>ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</h4>
+
+	    <div class="  ">
+		    <form>
+			    <input type="text" placeholder="Имя">
+		    </form>
+	    </div>
+
+	    <div class="  ">
+		    <form>
+			    <input type="text" placeholder="Email">
+		    </form>
+	    </div>
+
+	    <div class="  ">
+		    <form>
+			    <input type="text" placeholder="Сообщение">
+		    </form>
+	    </div>
+
+		<div class="  ">
+			<form> <input type="reset" value="Отправить"></form>
+        </div>
+
+		
+
+	   
+        <div class="  ">
+        	<img src="img/фб.png" alt="">
+        </div>
+
+         <div class="  ">
+        	<img src="img/твитер.png" alt="">
+        </div>
+
+         <div class="  ">
+        	<img src="img/мяч.png" alt="">
+        </div>
+
+         <div class="  ">
+        	<img src="img/киса.png" alt="">
+        </div>
+
+         <div class="  ">
+        	<img src="img/инст.png" alt="">
+        </div>
+
+         <div class="  ">
+        	<img src="img/фб.png" alt="">
+        </div>
+
+         <div class="  ">
+        	<img src="img/ин.png" alt="">
+        </div>
+
+
+		<p>Copyright©2021 Андрей Браун. Design by Web</p>
+
+
+    </footer>
+
+</body>
 </html>
