--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 	<div class="about_me">
 		<div class="inform">
 		<h3>Обо мне</h3>
-		<img class="picture_1" src="img/черта заголовка.png" alt=""> <br>
+		<img class="picture_1" src="img/Черта заголовка.png" alt=""> <br>
 		<img class="picture_2" src="img/фотка1.png" alt="">
 
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto cum consectetur, maiores exercitationem, cumque, recusandae suscipit quasi commodi aliquam debitis ipsum ducimus asperiores delectus dolorum.</p> 
@@ -89,7 +89,7 @@
     <div class="case">
     	<div class="inform_3">
 		<h3>Кейсы </h3>
-		<img src="img/черта заголовка.png" alt="">
+		<img src="img/Черта заголовка.png" alt="">
 		</div>
 
         <div class="lorem">
@@ -183,7 +183,7 @@
     <div class="statistics">
     	<div class="inform_5">
 		<h3>Немного статистики</h3>
-		<img src="img/черта заголовка.png" alt="">
+		<img src="img/Черта заголовка.png" alt="">
         </div>
 
 		<div class="number">
@@ -209,7 +209,7 @@
     <div class="reviews"> 
     	<div class="inform_6">
 		<h3>Отзывы</h3>
-		<img src="img/черта заголовка.png" alt=""> <br>
+		<img src="img/Черта заголовка.png" alt=""> <br>
 		<img src="img/фотка3.png" alt="">
       
 		<p>Lorem ipsum dolor sit, amet consectetur, adipisicing elit. Qui ex, aperiam fuga! Quibusdam nisi esse corporis quis sed ipsum impedit.</p>
@@ -218,9 +218,9 @@
 		  </div>
 
 		  <div class="new_element">
-		  	<img src="img/оранж.png" alt="">
-		  	<img src="img/оранж копия.png" alt="">
-		  	<img src="img/оранж копия 2.png" alt="">
+		  	<img src="img/Оранж.png" alt="">
+		  	<img src="img/Оранж копия.png" alt="">
+		  	<img src="img/Оранж копия 2.png" alt="">
 		  </div>
     </div>
 
@@ -228,7 +228,7 @@
 	<div class="my_contacts">
 		<div class="inform_7">
  	    <h3>Мои контакты</h3>
-		<img src="img/черта заголовка.png" alt="">
+		<img src="img/Черта заголовка.png" alt="">
 
 		<p> Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Labore, iste. Earum, porro, perspiciatis.</p>
         </div>
